Fix: Upgrade Spring Boot version from 3.2.4 to 3.3.2